[package]
name = "yun-market-service"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.59"
axum = "0.6.0"
futures = "0.3.25"
hyper = { version = "0.14.23", features = ["full"] }
openssl = { version = "0.10.43", features = ["vendored"] }
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
serde_repr = "0.1.9"
serde_yaml = "0.9.14"
rbatis =  "4.0.43"
rbs = "0.1.13"
rbdc-mysql = "0.1.18"
tokio = { version = "1.22.0", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
dotenv = "0.15.0"
once_cell = "1.16.0"
tracing-appender = "0.2.2"
reqwest-middleware = "0.2.0"
reqwest-tracing = "0.4.0"


[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
